# tokenbuddy

./: .replit  main.py  process.py  pyproject.toml
templates/: download.html  form.html
uploads/: 1120379_20221119_02 (1).csv  deposits.txt  orders.csv.csv  system_deposits.txt  withdrawals.txt
